# 2021-g2-nest

./: .gitignore  README.md  conf.json  config-overrides.js  design.fig  package-lock.json  package.json  pyproject.toml  test
code/backend/: .gitignore  README.md  pyproject.toml  web-nest.service
code/backend/docs/: conf.py  index.rst  modules.rst
code/backend/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  nest_backend.database.doctree  nest_backend.database.tables.doctree  nest_backend.doctree  nest_backend.routes.doctree  nest_backend.routes.repository.doctree  nest_backend.routes.users.doctree
code/backend/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  nest_backend.database.html  nest_backend.database.tables.html  nest_backend.html  nest_backend.routes.html  nest_backend.routes.repository.html  nest_backend.routes.users.html  objects.inv  py-modindex.html  search.html  searchindex.js
code/backend/docs/python_api/: index.rst  nest_backend.rst
code/backend/nest_backend/: __main__.py  api_schemas.py  api_spec.py  app.py  gestione.py  swagger.py
code/backend/nest_backend/database/: __init__.py  base.py
code/backend/nest_backend/database/tables/: Alert.py  Authorization.py  BoolOperation.py  Composed.py  Condition.py  Contains.py  Enums.py  Notification.py  Repository.py  Tweet.py  User.py  Uses.py  Utente.py  __init__.py
code/backend/nest_backend/routes/: __init__.py  doa.py
code/backend/nest_backend/routes/repository/: __init__.py  repositories.py  repository.py  repository_add_condition.py  repository_conditions.py  repository_create.py  repository_edit.py  (+1 more)
code/backend/nest_backend/test/: conftest.py  login_test.py  openapi_compliance_test.py  repositories_test.py  repository_conditions_test.py  repository_create_test.py  repository_edit_test.py  repository_test.py  test_doa.py  test_user.py  test_user_add.py  test_user_delete.py  test_user_get.py  test_zrepository.py  user_create_test.py  user_delete_test.py  user_test.py  users_test.py
code/backend/nest_backend/tweet_explorer/: __main__.py
code/backend/nest_backend/tweetexplorer/: __main__.py
code/backend/old_unittest_tests/: openapi_compliance_test.py  users_test.py
(+529 files in other folders)
