[tool.poetry]
name = "nest_backend"
version = "0.1.0"
description = ""
authors = ["Lorenzo Balugani <lorenzo.balugani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
psycopg2-binary = "^2.8.6"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
bcrypt = "^3.2.0"
Flask-JWT-Extended = "^4.1.0"
Flask-Cors = "^3.0.10"
pytest = "^6.2.3"
requests = "^2.25.1"
Sphinx = "^3.5.4"
tweepy = "^3.10.0"
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
